add igbinary extension

--- a/php72/cli/Dockerfile
+++ b/php72/cli/Dockerfile
@@ -5,7 +5,7 @@ ARG DEBIAN_FRONTEND=noninteractive
 
 # Install selected extensions and other stuff
 RUN apt-get update \
- && apt-get -y --no-install-recommends install php7.2-pgsql php7.2-bcmath php7.2-redis php7.2-phpdbg \
+ && apt-get -y --no-install-recommends install php7.2-pgsql php7.2-bcmath php7.2-redis php7.2-phpdbg php7.2-igbinary \
  && apt-get clean; rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/* /usr/share/doc/*
 
 # Install git
