installed mysql & intl extensions

--- a/php74/cli/Dockerfile
+++ b/php74/cli/Dockerfile
@@ -5,7 +5,7 @@ ARG DEBIAN_FRONTEND=noninteractive
 
 # Install selected extensions and other stuff
 RUN apt-get update \
- && apt-get -y --no-install-recommends install php7.4-pgsql php7.4-bcmath php7.4-redis php7.4-phpdbg php7.4-igbinary \
+ && apt-get -y --no-install-recommends install php7.4-mysql php7.4-pgsql php7.4-bcmath php7.4-redis php7.4-phpdbg php7.4-igbinary php7.4-intl \
  && apt-get clean; rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/* /usr/share/doc/*
 
 # Install git
